# crater-sw

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  LICENSE.txt  README.md  build.rs  tree.txt
crater/flight/: Cargo.toml
crater/flight/cpp/: CMakeLists.txt
crater/flight/cpp/bsps/stm32f756zg_nucleo/config/: board_settings.h
crater/flight/cpp/cmake/: Warnings.cmake  stm32f756.toolchain.cmake
crater/flight/cpp/entrypoints/: rust_main.cpp
crater/flight/src/: lib.rs  rust_main.rs
crater/hal/: Cargo.toml
crater/hal/src/: lib.rs
crater/hal/src/miosix/: interrupts.rs  mod.rs
crater/hal/src/miosix/fmt/: mod.rs
crater/hal/src/miosix/newlib/: miosix_newlib.h
crater/hal/src/miosix/std/alloc/: mod.rs
crater/hal/src/miosix/std/newlib/: generate_bindings.sh  miosix_newlib.h  miosix_newlib.rs
crater/hal/src/miosix/std/thread/: mod.rs
crater/hal/src/miosix/sync/: mod.rs  mutex.rs
crater/hal/src/miosix/thread/: mod.rs
crater/plant/: Cargo.toml  build.rs
crater/plant/config/: openloop_seq.toml  params.toml
crater/plant/src/: lib.rs  main.rs
crater/plant/src/core/: time.rs
crater/plant/src/crater/logging/: rerun.rs
crater/plant/src/crater/sim/: mod.rs  rocket.rs  rocket_data.rs  rocket_output.rs
crater/plant/src/crater/sim/aero/: aerodynamics.rs
crater/plant/src/crater/sim/engine/: simplerocketengine.rs
crater/plant/src/crater/sim/ffi/: cratercpp.rs  mavlink_buffer_ffi.rs  mod.rs
crater/plant/src/crater/sim/gnc/: datatypes.rs
crater/plant/src/crater/sim/sensors/: datatypes.rs  mod.rs
crater/plant/src/nodes/: executor.rs  node.rs
crater/plant/src/parameters/: mod.rs
crater/plant/src/telemetry/: service.rs
crater/plant/src/utils/ringchannel/: mod.rs  select.rs
fsw/: .clang-format  .clangd  Cargo.toml  build.rs  build.sh  memory.x
fsw/.cargo/: config.toml
fsw/docs/: hil.plantuml
fsw/drivers/: CMakeLists.txt
fsw/drivers/spi/: defs.h  master.hpp  slave.hpp
fsw/drivers/test/: test.cpp  test.h
fsw/embedded/: CMakeLists.txt
fsw/embedded/bsps/include/: endian.h
fsw/embedded/bsps/stm32f756zg_nucleo/: stm32_1m+256k_rom.ld
fsw/embedded/bsps/stm32f756zg_nucleo/interfaces-impl/: bsp.cpp
fsw/embedded/cmake/: MiosixBoardConfig.cmake  MiosixTarget.cmake  miosix.toolchain.cmake
fsw/embedded/cmake/cross/: miosix.toolchain.cmake  stm32f756.toolchain.cmake
fsw/embedded/entrypoints/hi_mom/: main.cpp
fsw/embedded/src/bsps/stm32f756zg_nucleo/: boot.cpp
fsw/embedded/src/bsps/stm32f756zg_nucleo/config/: board_options.cmake  miosix_settings.h
fsw/embedded/tests/: tests_main.cpp
fsw/entrypoints/hi_mom/: CMakeLists.txt  main.cpp  run.sh
fsw/entrypoints/tests/spi/master/: CMakeLists.txt  main.cpp
fsw/entrypoints/tests/spi/slave/: CMakeLists.txt  main.cpp
fsw/proto/: .gitignore  CMakeLists.txt  cratergen.py  requirements.txt
fsw/proto/message_definitions/v1.0/: crater.xml
fsw/proto/templates/: ErrorCode.hpp.jinja
fsw/shared/: CMakeLists.txt  CMakePresets.json
fsw/shared/inc/crater/: Common.hpp
fsw/shared/inc/crater/core/: Channel.hpp  Clock.hpp
fsw/shared/inc/crater/core/collections/: CircularBuffer.hpp
fsw/shared/inc/crater/main/: MainExec.hpp
fsw/shared/inc/crater/telemetry/: Mavlink.hpp
fsw/shared/src/: a.cpp
fsw/shared/src/crater/main/: MainExec.cpp
fsw/shared/tests/: main.cpp  test_channel.cpp  test_circular_buffer.cpp  test_errors.cpp  test_mavlink.cpp  test_mutex.cpp
fsw/src/: lib.rs
fsw/src/device/: bsp.rs  mod.rs  spi copy.rs  spi.rs
fsw/src/io/: channel.rs
fsw/src/sensors/: bmp390.rs  icm42688.rs  mod.rs
gnc/: Cargo.toml  build.rs
gnc/proto/: mav_crater.xml
gnc/src/: channel.rs  component.rs  component_loop.rs  gnc_main.rs  hal.rs  lib.rs  mainloop.rs
gnc/src/common/: mod.rs  timestamped.rs
gnc/src/components/: ada.rs  flight_mode_manager.rs  fmm.rs  mod.rs  navigation.rs
gnc/src/datatypes/: gnc.rs  mod.rs  pin.rs  sensors.rs
gnc/src/events/: event.rs  event_queue.rs  events.rs  mod.rs
gnc/src/hal/: channel.rs  mod.rs
gnc/src/io/: mavlink_dispatcher.rs  mavlink_reader.rs  mavlink_writer.rs  mod.rs
proto/: .clang-format  CMakeLists.txt  basic.proto  crater.xml  cratergen.py  examples.proto  requirements.txt  sensors.proto
proto/templates/: ErrorCode.cpp.jinja
sim/: .gitignore  Cargo.toml  build.rs
sim/config/: fin_sequence.json  motor.json  openloop_seq.toml  params.toml
sim/src/: lib.rs  main.rs  model.rs  montecarlorunner.rs  runner.rs
sim/src/core/: mod.rs  path.rs  time.rs
sim/src/crater/: channels.rs  events.rs  mod.rs
sim/src/crater/actuators/: mod.rs
sim/src/crater/actuators/ideal/: servo.rs
sim/src/crater/aero/: atmosphere.rs  mod.rs  wind.rs
sim/src/crater/engine/: engine.rs
sim/src/crater/gnc/: datatypes.rs  mod.rs  sequencer.rs
sim/src/crater/gnc/fsw/: fsw.rs  fsw_channel.rs  mod.rs
sim/src/crater/gnc/openloop/: control.rs
sim/src/crater/gnc/orchestrator/: orchestrator.rs
sim/src/crater/logging/: mod.rs  rerun.rs
sim/src/crater/logging/rerun/: crater_configs.rs  crater_log_impl.rs  mod.rs  rerun.rs  rerun_logger.rs
sim/src/crater/rocket/: mod.rs  rocket.rs  rocket_data.rs  rocket_output.rs
sim/src/crater/sensors/ideal/: imu.rs  pressure.rs
sim/src/crater/sim/: events.rs  mod.rs  rocket.rs  rocket_data.rs  rocket_output.rs
sim/src/crater/sim/aero/: aerodynamics.rs  atmosphere.rs  linear_aerodynamics.rs  mod.rs  tab_turb.txt  tabulated_aerodynamics.rs  wind.rs
sim/src/crater/sim/engine/: engine.rs  mod.rs  simplerocketengine.rs  tabulatedrocketengine.rs
sim/src/crater/sim/ffi/: cratercpp.rs  mav_crater.rs  mod.rs
sim/src/crater/sim/gnc/: datatypes.rs  mod.rs
sim/src/crater/sim/rocket/: mass.rs  rocket.rs  rocket_data.rs  rocket_output.rs
sim/src/crater/sim/sensors/: datatypes.rs  mod.rs
sim/src/math/: mod.rs
sim/src/math/interp/: interp.rs  interp1.rs  interpn.rs  mod.rs
sim/src/nodes/: executor.rs  node.rs
sim/src/parameters/: parameters.rs
sim/src/telemetry/: mod.rs  selector.rs  service.rs
sim/src/utils/: mod.rs
sim/src/utils/ringchannel/: channel.rs  mod.rs  select.rs
(+115 files in other folders)
