[package]
name = "quadcopter"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
once_cell = "1.19.0"
prost = "0.13.3"
prost-reflect = { version = "0.14.2", features = ["derive"] }
rand = "0.8.5"
ringbuffer = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
toml = "0.8.19"

rust_data_inspector = { git = "https://github.com/Hixos/rust-data-inspector.git"}
rust_data_inspector_signals = { git = "https://github.com/Hixos/rust-data-inspector.git"}
itertools = "0.13.0"

[build-dependencies]
prost-build = "0.13.3"
prost-reflect-build = "0.14.0"
