[package]
name = "crater"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
once_cell = "1.19.0"
rand = "0.8.5"
ringbuffer = "0.15.0"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "2.0.10"
toml = "0.8.19"
egui = "0.30.0"

itertools = "0.14.0"
chrono = "0.4.38"
nalgebra = { version = "0.33.1", features = ["macros"] }
num-traits = "0.2.19"
approx = "0.5.1"
rerun = "0.21.0"
map_3d = "0.1.5"
