[package]
name = "crater-fsw"
version = "0.1.0"
edition = "2024"

[dependencies]

embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "memory-x",
    "unstable-pac",
    "time-driver-tim2",
] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-100_000",
] }
embedded-io-async = { version = "0.6.1" }
# embassy-usb = { version = "0.4.0", features = ["defmt"] }
# embassy-futures = { version = "0.1.0" }

defmt = "0.3"
defmt-rtt = "0.4"
# defmt-serial = "0.10.0"

cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
# embedded-hal = "0.2.6"
panic-probe = { version = "0.3", features = ["print-defmt"] }
heapless = { version = "0.8", default-features = false }
nb = "1.0.0"
rand_core = "0.6.3"
critical-section = "1.1"
# embedded-storage = "0.3.1"
static_cell = "2"
bitbybit = "1.3.3"
arbitrary-int = "1.3.0"
thiserror = { version = "2.0.12", default-features = false }
libm = "0.2.11"
uom = { version = "0.36.0", default-features = false, features = [
    "autoconvert",
    "usize",
    "isize",
    "f32",
    "si",
] }
embedded-alloc = "0.6.0"
crater-gnc = { path = "../gnc", default-features = false, features = [
    "mav_crater",
    "embedded",
    "defmt"
] }

[features]
default = ["nucleo_stm32f756"]
nucleo_stm32f756 = ["embassy-stm32/stm32f756zg"]
crater_stm32f767 = ["embassy-stm32/stm32f767zi"]

[lib]
[profile.dev]
opt-level = 1           # Use slightly better optimizations.
overflow-checks = false # Disable integer overflow checks.
