[package]
name = "crater"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
bytes = "1.10.1"
once_cell = "1.21.3"
ringbuffer = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.22"
itertools = "0.14.0"
chrono = "=0.4.39"
nalgebra = { version = "0.33.2", features = ["macros"] }
num-traits = "0.2.19"
rerun = "0.21.0"
map_3d = "0.1.5"
pretty_env_logger = "0.5.0"
log = "0.4.27"
rand_xoshiro = "0.7.0"
rand_distr = "0.5.1"
rand = "0.9.1"
csv = "1.3.1"
world_magnetic_model = "0.2.0"
serde_json = "1.0.140"
time = "0.3.41"
uom = { version = "0.36.0", default-features = false, features = [
    "f64",
    "f32",
    "i64",
    "si",
    "autoconvert",
] }
crater-gnc = { path = "../gnc" }
statig = { git = "https://github.com/Hixos/statig.git" }
flume = "0.11.1"
strum = { version = "0.27.1", features = ["derive"] }
hdf5-metno = "0.10.1"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1"


[profile.release]
debug = true
