[package]
name = "crater_flight"
version = "0.1.0"
edition = "2024"

[dependencies]
crater_core = { path = "../core" }

[target.'cfg(target_arch = "x86_64")'.dependencies]
crater_hal = { path = "../hal" }

[target.'cfg(target_arch = "arm")'.dependencies]
crater_hal = { path = "../hal", features = ["miosix"] }


[target.'cfg(target_arch = "arm")'.lib]
crate-type = ["staticlib"]
