[package]
name = "crater_plant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
bytes = "1.10.1"
once_cell = "1.21.3"
rand = "0.9.0"
ringbuffer = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
toml = "0.8.20"
egui = "0.31.1"

itertools = "0.14.0"
chrono = "0.4.38"
nalgebra = { version = "0.33.2", features = ["macros"] }
num-traits = "0.2.19"
rerun = "0.22.1"
map_3d = "0.1.5"
pretty_env_logger = "0.5.0"
log = "0.4.27"
crater_core = { path = "../core_lib" }

# mavlink = "0.13.1"
# mavlink-core = "0.13.1"
# num-derive = "0.4.2"
# bitflags = "2.9.0"

[dev-dependencies]
approx = "0.5.1"
pretty_assertions = "1"

# [build-dependencies]
# bindgen = "0.71.1"
# mavlink-bindgen = "0.13.1"

# [features]
# crater = []
# default = ["crater"]
